slideshow flickering fix

--- a/public/stylesheets/sass/module/_landing.scss
+++ b/public/stylesheets/sass/module/_landing.scss
@@ -1,10 +1,11 @@
 #bento {
+		// 
+	
 
 
-   background-size: 100px;
 
  
-	
+				
 
 		 	.uk-offcanvas {
 		 		width: auto;
@@ -13,7 +14,7 @@
 			.uk-slideshow{
 				// height: 900px;
 				position: relative;
-			    
+			   
 			  
 				// max-width: 1000px;
 				}	
@@ -27,7 +28,7 @@
 				}
 		
 			
-				.uk-navbar{
+			.uk-navbar{
 
 				padding: 20px 30px;
 				background-color: transparent;
@@ -51,8 +52,7 @@
 
 
 
-
-
+ 
 }
 	
 
